Bug 248611 - SFTP protocol displays symlink to dir as file; r=cbiesinger